--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,8 +2,12 @@
 target = "avr-none"
 rustflags = ["-C", "target-cpu=atmega2560"]
 
+# [target.'cfg(target_arch = "avr")']
+# runner = "ravedude --open-console --baudrate 57600 -P /dev/tty.usbmodem21101"
+
+# Windows config (WSL2, avrdude installed for windows)
 [target.'cfg(target_arch = "avr")']
-runner = "ravedude --open-console --baudrate 57600 -P /dev/tty.usbmodem21101"
+runner = "/mnt/c/avr/ravedude --open-console --baudrate 57600 -P /dev/tty.usbmodem21101"
 
 [unstable]
 build-std = ["core"]
