--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ panic-halt = "1.0.0"
 ufmt = "0.2.0"
 nb = "1.1.0"
 embedded-hal = "1.0"
+avr-device = { version = "0.8.1", features = ["atmega2560"] }
 
 [dependencies.arduino-hal]
 git = "https://github.com/rahix/avr-hal"
@@ -25,7 +26,7 @@ features = ["arduino-mega2560"]
 [profile.dev]
 panic = "abort"
 lto = true
-opt-level = "s"
+opt-level = 's'
 
 [profile.release]
 panic = "abort"
