--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -8,8 +8,11 @@ rustflags = ["-C", "target-cpu=atmega2560"]
 # Windows config (WSL2, avrdude installed for windows)
 [target.'cfg(target_arch = "avr")']
 # Actual board
-runner = "ravedude --open-console --baudrate 57600 -P /dev/tty.usbmodem1101"
-# QEMU
+# -- MacOS --
+# runner = "ravedude --open-console --baudrate 57600 -P /dev/tty.usbmodem1101"
+# -- Linux --
+runner = "ravedude --open-console --baudrate 57600 -P /dev/ttyACM0"
+# -- QEMU --
 # runner = "qemu-system-avr -s -S -M mega2560 -nographic -bios target/avr-none/debug/arduino-mega.elf"
 
 [unstable]
