--- a/avr-servo/Cargo.toml
+++ b/avr-servo/Cargo.toml
@@ -1,35 +1,28 @@
 [package]
-name = "arduino-mega"
+name = "avr-servo"
 version = "0.1.0"
-authors = ["Yannick Thimmesch <yannick.thimmesch@gmail.com>"]
-edition = "2021"
-license = "MIT OR Apache-2.0"
+edition = "2024"
+license = "MIT"
 
-[[bin]]
-name = "arduino-mega"
+
+[lib]
 test = false
 bench = false
 
 [dependencies]
-panic-halt = "1.0.0"
-ufmt = "0.2.0"
-nb = "1.1.0"
 embedded-hal = "1.0"
 avr-device = { version = "0.8.1", features = ["atmega2560"] }
+paste = "1.0.15"
 
 [dependencies.arduino-hal]
 git = "https://github.com/rahix/avr-hal"
 rev = "e5c8f37fe48419956e722490a82b9ca9b9fc61a2"
 features = ["arduino-mega2560"]
 
-[dependencies.avr-servo]
-path = "./avr-servo"
-
-# Configure the build for minimal size - AVRs have very little program memory
 [profile.dev]
 panic = "abort"
 lto = true
-opt-level = 3
+opt-level = 's'
 
 [profile.release]
 panic = "abort"
